--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build:stats": "ng build --stats-json",
+    "analyze": "webpack-bundle-analyzer dist/frontend/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -17,12 +19,15 @@
     "@angular/core": "~12.2.0",
     "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.2.0",
+    "@angular/google-maps": "^12.2.6",
     "@angular/material": "^12.2.5",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@ngrx/effects": "^12.4.0",
     "@ngrx/store": "^12.4.0",
+    "chart.js": "^2.9.4",
+    "ng2-charts": "^2.4.3",
     "ngx-paypal": "^8.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
@@ -40,6 +45,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "webpack-bundle-analyzer": "^4.4.2"
   }
 }
