--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "build:stats": "ng build --stats-json",
@@ -30,6 +30,7 @@
     "ng2-charts": "^2.4.3",
     "ngx-paypal": "^8.0.0",
     "rxjs": "~6.6.0",
+    "swiper": "^7.0.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
