--- a/package.json
+++ b/package.json
@@ -1,42 +1,22 @@
 {
-  "name": "amazona",
-  "type": "module",
+  "name": "angular-amazona",
   "version": "1.0.0",
-  "description": "Ecommerce website like amazon",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "cd frontend && npm install && npm run build",
+
+    "build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
     "start": "node backend/server.js",
-    "dev": "nodemon --watch backend --exec node --experimental-modules backend/server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/basir/amazona.git"
+    "url": "git+https://github.com/basir/angular-amazona.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/basir/amazona/issues"
+    "url": "https://github.com/basir/angular-amazona/issues"
   },
-  "homepage": "https://github.com/basir/amazona#readme",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.27.0",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-async-handler": "^1.1.4",
-    "jsonwebtoken": "^8.5.1",
-    "mailgun-js": "^0.22.0",
-    "mongoose": "^5.10.7",
-    "multer": "^1.4.2",
-    "socket.io": "^4.0.1",
-    "streamifier": "^0.1.1"
-  },
-  "devDependencies": {
-    "eslint": "^7.9.0",
-    "eslint-plugin-react": "^7.21.2",
-    "nodemon": "^2.0.4"
-  }
+  "homepage": "https://github.com/basir/angular-amazona#readme"
 }
