--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,5 @@
 MONGODB_URI=your atlas or local mongodb connection
+PORT=server port
 MAILGUN_API_KEY=your mailgun api key
 MAILGUN_DOMIAN=your mailgun domain
 CLOUDINARY_CLOUD_NAME=your cloudinary domain name
