--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,25 +1,46 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+.env
+# compiled output
+/build
+/dist
+/tmp
+/out-tsc
+# Only exists if Bazel was run
+/bazel-out
+
 # dependencies
-node_modules
-/.pnp
-.pnp.js
+/node_modules
 
-# testing
-/coverage
+# profiling files
+chrome-profiler-events*.json
 
-# production
-build
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
 
 # misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
+
+# System Files
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log* 
-package-lock.json
-
-.env
-/uploads/*.jpg
+Thumbs.db
