--- a/backend/package.json
+++ b/backend/package.json
@@ -1,41 +1,40 @@
 {
-  "name": "backend",
-  "type": "module",
+  "name": "ts-backend",
   "version": "1.0.0",
-  "description": "Ecommerce website like amazon",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "build": "cd frontend && npm install && npm run build",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "TG_ALLOW_MIXED=ALLOW ts-node-dev --respawn --pretty --transpile-only --files src/index.ts",
+    "build": "tsc"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/basir/amazona.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/basir/amazona/issues"
-  },
-  "homepage": "https://github.com/basir/amazona#readme",
   "dependencies": {
+    "@typegoose/typegoose": "^9.1.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.27.0",
-    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mailgun-js": "^0.22.0",
-    "mongoose": "^5.10.7",
-    "multer": "^1.4.2",
-    "socket.io": "^4.0.1",
+    "mongoose": "^6.0.9",
+    "multer": "^1.4.3",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
-    "eslint": "^7.9.0", 
-    "nodemon": "^2.0.4"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^16.10.3",
+    "@types/streamifier": "^0.1.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.3"
   }
 }
